--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-useref": "^1.2.0",
     "gulp-util": "^3.0.6",
     "html-loader": "^0.3.0",
+    "merge-stream": "^0.1.8",
     "ng-annotate-webpack-plugin": "^0.1.2",
     "ng-cache-loader": "0.0.9",
     "ngtemplate-loader": "^1.3.0",
@@ -25,6 +26,9 @@
   },
   "dependencies": {
     "angular": "^1.4.1",
+    "angular-animate": "^1.3.17",
+    "angular-aria": "^1.3.17",
+    "angular-material": "^0.10.0",
     "bluebird": "^2.9.32",
     "lodash": "^3.10.0",
     "ui-router": "0.0.1"
